build_error.txt
install
+- install minbot
   +- compile exe minbot Debug native 2 errors
src/agent.zig:10:11: error: root source file struct 'Io' has no member named 'getStdOut'
    std.io.getStdOut().writer().writeAll(chunk) catch {};
    ~~~~~~^~~~~~~~~~
/opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/Io.zig:1:1: note: struct declared here
const builtin = @import("builtin");
^~~~~
referenced by:
    run: src/agent.zig:111:84
    runAgent: src/main.zig:63:18
    5 reference(s) hidden; use '-freference-trace=7' to see all references
src/providers/openrouter.zig:153:24: error: root source file struct 'std' has no member named 'fifo'
        var fifo = std.fifo.LinearFifo(u8, .{ .Static = 8192 }).init();
                       ^~~~
/opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/std.zig:1:1: note: struct declared here
pub const ArrayHashMap = array_hash_map.ArrayHashMap;
^~~
error: the following command failed with 2 compilation errors:
/opt/homebrew/Cellar/zig/0.15.2/bin/zig build-exe -ODebug --dep minbot -Mroot=/Users/a0/w/chatbot/minbot/src/main.zig -Mminbot=/Users/a0/w/chatbot/minbot/src/root.zig --cache-dir .zig-cache --global-cache-dir /Users/a0/.cache/zig --name minbot --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.2/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
install transitive failure
+- install minbot transitive failure
   +- compile exe minbot Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache/o/c28b7bef94a5b907ec85cb1ba583de09/build /opt/homebrew/Cellar/zig/0.15.2/bin/zig /opt/homebrew/Cellar/zig/0.15.2/lib/zig /Users/a0/w/chatbot/minbot .zig-cache /Users/a0/.cache/zig --seed 0xc7135f7d -Z0ec895c649b388e2
